# beanstalk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: README.md  adopting-this.md  design-rules.md  enforcement-map.md
scripts/: import_graph.py  import_graph_template.html  try_api.py
src/beanstalk/: README.md  __init__.py
src/beanstalk/api/: README.md  __init__.py  app.py  routes.py
src/beanstalk/core/: README.md  __init__.py  affordability.py  application.py  decision.py  decisioning.py  eligibility.py
src/beanstalk/domain/: README.md  __init__.py  affordability.py  decisioning.py  eligibility.py
src/beanstalk/features/: README.md  __init__.py
src/beanstalk/features/machine_recommender/: README.md  __init__.py  catalog.py  entrypoint.py
src/beanstalk/features/risk_scorer/: README.md  __init__.py  entrypoint.py  feature_vector.py  predict.py  train.py
src/beanstalk/features/risk_scorer/artifacts/: default_risk.joblib
src/beanstalk/interfaces/: README.md  __init__.py
src/beanstalk/interfaces/airflow/: README.md
src/beanstalk/interfaces/api/: README.md  app.py  routes.py  schemas.py
src/beanstalk/interfaces/ui/: README.md  app.py  routes.py
src/beanstalk/interfaces/ui/templates/: queue.html
src/beanstalk/model/: README.md  __init__.py  features.py  predict.py  synthetic.py  train.py
src/beanstalk/services/: README.md  __init__.py  applications.py  decision_records.py  recommending.py  repository.py  scoring.py  settings.py
src/beanstalk/services/adapters/: __init__.py  sqlite.py
src/beanstalk/ui/: README.md  __init__.py  app.py  forms.py  routes.py
src/beanstalk/ui/templates/: base.html  detail.html
src/beanstalk/utils/: README.md  __init__.py  finmath.py  ids.py  money.py
tests/: README.md
tests/arch/: README.md  conftest.py  test_lcom4.py  test_model_logic.py  test_no_inheritance.py
tests/arch/checkers/: __init__.py  config.py  imports.py  lcom4.py  model_logic.py  no_inheritance.py
tests/arch/fixtures/: bad_cohesion.py  bad_data_models.py  bad_inheritance.py  good_cohesion.py  good_data_models.py  good_inheritance.py
tests/features/: test_recommender.py  test_risk_model.py
tests/integration/: conftest.py  test_api.py  test_recommendation.py  test_ui.py
tests/model/: test_risk_model.py
tests/unit/: builders.py  test_affordability.py  test_decisioning.py  test_eligibility.py  test_finmath.py  test_money.py
